missing padding at user image : Fixed.

--- a/src/main/java/org/ednovo/gooru/client/mvp/classpages/home/StudyStyles.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/classpages/home/StudyStyles.css
@@ -60,7 +60,7 @@ cursor: pointer;
 	font-weight: bold;
 	color: rgb(81,81,81);
 	float: left;
-	margin: 10px 10px;
+	margin: 12px 10px;
 }
 .ownerClasses{
 	min-height:100px;
@@ -147,9 +147,9 @@ cursor: pointer;
 	float: left;
 	margin-left: 10px;
 	font-size: 12px;
-font-weight: bold;
-color: #515151;
-margin-top:10px;
+	font-weight: bold;
+	color: #515151;
+	margin-top:12px;
 }
 .centerAlignBtn{
 	text-align:center;
